--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ text-shadow: #e0e0e0 1px 1px 0;
       <input type="checkbox" id="geodesic">
       <label for="geodesic">Geodesic?</label>
 
-      <button onclick="myFunction()">Click me</button>
+      <button onclick="reload()">Click me</button>
     </div>
 
 
