--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
        .container {
 
         color: #616161;
-background: #bababa;
+background: #0693E3;
 text-shadow: #e0e0e0 1px 1px 0;
-        background: #D0E4F5 url("https://icdn6.digitaltrends.com/image/bestwallpapers01-640x640.jpg") no-repeat scroll -50px -21px;
+       
   display: flex;
   justify-content: center;
 }
@@ -77,7 +77,8 @@ text-shadow: #e0e0e0 1px 1px 0;
    id="idemail" style="height: 50px;" value="mi@gmail.com"><div class="clespacio"></div>  <p style="height: 50px;"><br><br><p style="height: 50px;"><br>
   Pass:<input style="width:  90%; opacity: 0.5;" type="text"
    id="idpass" value="mipass1">
-<button class="butn" onclick="login()">Click me</button>
+<button class="butn" onclick="login()">ok</button>
+ <button class="butn" onclick="activar()">activar</button>
 </div>
 
   
@@ -90,7 +91,7 @@ text-shadow: #e0e0e0 1px 1px 0;
       <input type="checkbox" id="geodesic">
       <label for="geodesic">Geodesic?</label>
 
-      <button onclick="reload()">Click me</button>
+     
     </div>
 
 
